# OpenEnv-Auctioneer

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_local.ps1  test_sequencing.py  validate-submission.sh
Datasets/: Address.txt
server/: app.py
